src/test/ui/asm/asm-bad-clobber.stderr
error[E0664]: clobber should not be surrounded by braces
  --> $DIR/asm-bad-clobber.rs:22:37
   |
LL |         asm!("xor %eax, %eax" : : : "{eax}");
   |                                     ^^^^^^^

error: aborting due to previous error

